# basic

./: .gitignore  LICENSE  Makefile  Makefile.Linux  Makefile.xmega  README.md  TODO  TODO.md  config.h.in  configure.ac  else.bas  test  test.sh
Windows/: BASIC.sln  BASIC.vcxproj  BASIC.vcxproj.filters
arch/: arch.h
arch/linux/: arch.c  error.c  kbhit.c  main.c  sleep.c
arch/osx/: arch.c  error.c  main.c  sleep.c
arch/windows/: arch.c  error.c  kbhit.c  main.c  sleep.c
arch/xmega/: arch.c  c64_keyboard.c  console.c  console.h  diskio.h  error.c  ffconf.h  joystick.c  kbhit.c  main.c  mmc.c  mmc.h  sleep.c  sound.c  sound.h
examples/: autolist  color.bas  data.bas  dim.bas  for.bas  for_colon.bas  get.bas  gosub.bas  goto.bas  hello.bas  if_and_or.bas  math.bas  sine_wave.bas  sleep.bas  strings.bas
examples/tests/: autolist
include/: arch.h  array.h  dictionary.h  line.h  lines.h  parser.h  tokenizer.h  usingwin.h  variables.h
src/: arch.h  array.c  basic.c  basic.h  callback.h  dict.c  dictionary.c  dictionary.h  error.c  expr.c  func.c  hexdump.c  io.c  io.h  line.c  lines.c  lines.h  main.c  parser.c  parser.h  private.h  stmt.c  token.c  tokenizer.c  tokenizer.h  variables.c  variables.h  vars.c  version.h
src/arch/linux/: README.txt  arch.c  console.c  console.h
src/arch/osx/: arch.c  main.c
src/arch/win32/: arch.c  basic.rc  console.c  getopt.c  getopt.h  opendir.c  opendir.h
src/arch/xmega/: arch.c  error.c
t/: Makefile  main.c  test_dictionary.c  test_lines.c
tests/: test.sh
tests/t/: Makefile
